<resources>
    <string name="app_name">Voya</string>
    <string name="purple_dropdown">Purple Dropdown</string>

    <string name="no_internet">You are not connected to the internet.</string>

    <string name="login_header">Login</string>
    <string name="login_button">LOGIN</string>
    <string name="incorrect_username">User not found</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="logged_in">You\'ve been logged in</string>

    <string name="register_header">Register</string>
    <string name="register_button">REGISTER</string>
    <string name="full_name_preview">Full Name</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="username_used">Username is in use</string>
    <string name="empty_fields">You need to fill out all the above fields.</string>
    <string name="invalid_fullname">You must provide your first and last name.</string>
    <string name="invalid_username">This username is not valid. Must be alphanumeric [may contain underscores].</string>
    <string name="invalid_password">This password is not valid. Must contain an uppercase letter and a number.</string>
    <string name="mismatching_passwords">Your passwords don\'t match.</string>
    <string name="registered">You\'ve been registered</string>

    <string name="exception_popup">Something went wrong. Please try again.</string>

    <string name="username_preview">Username</string>
    <string name="password_preview">Password</string>

    <string name="register_prompt">Not registered yet? Sign up now</string>
    <string name="login_prompt">Already have an account? Log in now</string>

    <string name="books_tab_name">Books</string>
    <string name="invites_tab_name">Invites</string>

    <string name="user_greeting">Hello, %username%!</string>

    <string name="no_books">You have no books. Why not create one?</string>
    <string name="no_invites">You haven\'t been invited to read any books yet.</string>
    <string name="home_button_desc">An outline of a door with an arrow.</string>
    <string name="new_button_desc">A plus.</string>
    <string name="profile_button_desc">An outline of a person\'s upper torso.</string>

    <string name="author_invite">Invite as an author?</string>

</resources>