<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:translationZ="500dp"
    tools:context=".activities.auth.LoginActivity">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/auth_bg_transparent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="44dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/rolodex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="250dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/auth_box"
            app:cardCornerRadius="25dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:id="@+id/login_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/register_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/afacad"
                    android:text="@string/register_header"
                    android:textAlignment="center"
                    android:textColor="@color/sage_green"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:autofillHints="username"
                    android:background="@drawable/auth_box"
                    android:drawableStart="@android:drawable/ic_menu_info_details"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/full_name_preview"
                    android:inputType="text"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#212121"
                    android:textColorHighlight="#000000" />

                <EditText
                    android:id="@+id/username_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:autofillHints="username"
                    android:background="@drawable/auth_box"
                    android:drawableStart="@android:drawable/ic_menu_myplaces"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/username_preview"
                    android:inputType="text"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#212121"
                    android:textColorHighlight="#000000" />

                <EditText
                    android:id="@+id/password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:autofillHints="password"
                    android:background="@drawable/auth_box"
                    android:drawableStart="@android:drawable/ic_menu_view"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/password_preview"
                    android:inputType="text|textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#212121"
                    android:textColorHighlight="#000000" />

                <EditText
                    android:id="@+id/confirm_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:autofillHints="password"
                    android:background="@drawable/auth_box"
                    android:drawableStart="@android:drawable/ic_lock_lock"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/password_confirmation"
                    android:inputType="text|textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#212121"
                    android:textColorHighlight="#000000" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/sage_green"
                    android:text="@string/register_button" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/login_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/afacad"
            android:padding="50dp"
            android:text="@string/login_prompt"
            android:textAlignment="center"
            android:textColor="@color/sage_green"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>